--- a/client/app/main.scss
+++ b/client/app/main.scss
@@ -1,9 +1,14 @@
 @import "bootstrap-custom";
 @import "application/style";
+@import "header/style";
 
 html,
 body {
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+.inline-block {
+  display: inline-block;
 }
