Organizations show page basic layout.

--- a/client/app/application/style.scss
+++ b/client/app/application/style.scss
@@ -1,7 +1,10 @@
+$application-padding: 20px;
+
 .application {
   position: relative;
   width: 100%;
   height: 100%;
   overflow-y: scroll;
-  padding-top: $navbar-height;
+  padding: $application-padding;
+  padding-top: $navbar-height + $application-padding;
 }
