--- a/server/mediapublic/templates/logged_in.jinja2
+++ b/server/mediapublic/templates/logged_in.jinja2
@@ -1,3 +1,8 @@
 <html>
-<h3>Welcome, @{{ handle }}</h3>
+{% if exists %}
+<h3>Welcome back, @{{ handle }}</h3>
+{% else %}
+<h3>Welcome @{{ handle }}</h3>
+<p>Please enter an email to complete your profile.</p>
+{% endif %}
 </html>
