--- a/client/app/organizations/show/template.jade
+++ b/client/app/organizations/show/template.jade
@@ -1,23 +1,27 @@
 // TODO: replace this with an absolute path, need to specify 'basedir'
 include ../../shared/address.jade
 
-mixin detailsRow(title)
+mixin detailsRow(field, title)
   tr.organization-details-row
     td.organization-details-field-title= title
-    td.organization-details-field-value
+    td.organization-details-field-value(model=cid, data-editors=field)
       yield block
 
 .organization-container
-  h1.organization-title= short_name
+  h1.organization-title(model=cid, data-editors='short_name')= short_name
   aside.organization-aside
     table.organization-details.table
       if primary_website
-        +detailsRow('Website')
+        +detailsRow('primary_website', 'Website')
           a(href=primary_website)= primary_website
       if address_0 && city
-        +detailsRow('Location')
+        +detailsRow('address_0,address_1,city,state,zipcode', 'Location')
           +address(address_0, address_1, city, state, zipcode)
       if phone
-        +detailsRow('Phone')
+        +detailsRow('phone', 'Phone')
           = phone
-  p.organization-description= long_description
+  p.organization-description(model=cid, data-editors='long_description')= long_description
+  if viewState.editing
+    button.save Save
+  else
+    button.edit Edit
