--- a/client/app/organizations/show/template.jade
+++ b/client/app/organizations/show/template.jade
@@ -4,24 +4,24 @@ include ../../shared/address.jade
 mixin detailsRow(field, title)
   tr.organization-details-row
     td.organization-details-field-title= title
-    td.organization-details-field-value(model=cid, data-editors=field)
+    td.organization-details-field-value(model=cid, data-fields=field)
       yield block
 
 .organization-container
-  h1.organization-title(model=cid, data-editors='short_name')= short_name
+  h1.organization-title(model=cid, data-fields='short_name')= short_name
   aside.organization-aside
     table.organization-details.table
-      if primary_website
+      if primary_website || viewState.editing
         +detailsRow('primary_website', 'Website')
           a(href=primary_website)= primary_website
-      if address_0 && city
+      if (address_0 && city) || viewState.editing
         +detailsRow('address_0,address_1,city,state,zipcode', 'Location')
           +address(address_0, address_1, city, state, zipcode)
-      if phone
+      if phone || viewState.editing
         +detailsRow('phone', 'Phone')
           = phone
-  p.organization-description(model=cid, data-editors='long_description')= long_description
+  p.organization-description(model=cid, data-fields='long_description')= long_description
   if viewState.editing
-    button.save Save
+    .btn.btn-primary.save Save
   else
-    button.edit Edit
+    .btn.btn-default.edit Edit
