--- a/client/app/organizations/style.scss
+++ b/client/app/organizations/style.scss
@@ -1,4 +1,6 @@
-.organization-container {
+.organization-container,
+.people-container,
+.recordings-container {
   position: relative;
   max-width: 600px;
   width: 100%;
