--- a/client/app/shared/people/style.scss
+++ b/client/app/shared/people/style.scss
@@ -1,8 +1,14 @@
+.people {
+  margin-top: 40px;
+}
+
 .person {
+  display: inline-block;
   border: 1px solid $borderGray;
   width: 200px;
   position: relative;
   height: 200px;
+  margin: 10px 10px 0 0;
 }
 
 .person-picture {
@@ -23,6 +29,7 @@
   padding: 10px;
   background-color: rgba(35, 35, 35, 0.5);
   transition: all 0.2s linear;
+  color: #ddd;
 }
 
 .person:hover .person-details {
@@ -32,7 +39,7 @@
 
 .person-edit {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
   color: #fff;
 }
