--- a/client/app/application/style.scss
+++ b/client/app/application/style.scss
@@ -6,5 +6,5 @@ $application-padding: 20px;
   height: 100%;
   overflow-y: scroll;
   padding: $application-padding;
-  padding-top: $navbar-height + $application-padding;
+  padding-top: $navbar-height;
 }
