--- a/client/app/organizations/show/layouttemplate.jade
+++ b/client/app/organizations/show/layouttemplate.jade
@@ -1,3 +1,5 @@
-.organization-container
-.people-container
-.recordings-container
+.region-container.organization-banner-container
+.region-container.organization-details-container
+.region-container.help-requests-container
+.region-container.people-container
+.region-container.recordings-container
