More organization things. Add fake people.

--- a/client/app/shared/people/collectiontemplate.jade
+++ b/client/app/shared/people/collectiontemplate.jade
@@ -1,5 +1,4 @@
+include ../templates/loadmore.jade
+
 .people-list
-.new-person-container
-  .btn.btn-default.add
-    i.fa.fa-plus
-    | &nbsp; Add person
++loadmore
