--- a/client/app/organizations/show/detailstemplate.jade
+++ b/client/app/organizations/show/detailstemplate.jade
@@ -8,25 +8,33 @@ mixin detailsRow(field, icon)
       yield block
 
 p.organization-short-description(model=cid, data-fields='short_description')= short_description
-if !viewState.expanded
-  a.action.read-more Read more
-if viewState.expanded
+if !viewState.expanded && !viewState.editing
+  .read-action-container
+    a.action.read-more Read more
+else
   .organization-expanded-details
     p.organization-description(model=cid, data-fields='long_description')= long_description
-    .organization-details-box
-      if primary_website || viewState.editing
-        +detailsRow('primary_website', 'fa-link')
-          a(href=primary_website)= primary_website
-      if (address_0 && city) || viewState.editing
-        +detailsRow('address_0,address_1,city,state,zipcode', 'fa-map-marker')
-          +address(address_0, address_1, city, state, zipcode)
-      if phone || viewState.editing
-        +detailsRow('phone', 'fa-phone')
-          = phone
-    a.action.read-less Read less
-  if viewState.editing
-    .image-field(model=cid, data-fields='image_url')
-    .btn.btn-primary.save Save
-    .btn.btn-default.cancel Cancel
-  else
-    .btn.btn-default.edit Edit
+    .read-action-container
+      a.action.read-less Read less
+    .organization-details-box-container
+      .organization-details-box
+        if (address_0 && city) || viewState.editing
+          +detailsRow('address_0,address_1,city,state,zipcode', 'fa-map-marker')
+            +address(address_0, address_1, city, state, zipcode)
+      .organization-details-box
+        if primary_website || viewState.editing
+          +detailsRow('primary_website', 'fa-link')
+            a(href=primary_website)= primary_website
+        if phone || viewState.editing
+          +detailsRow('phone', 'fa-phone')
+            = phone
+if viewState.editing
+  .extra-field.twitter-field(model=cid, data-fields='twitter')
+  .extra-field.facebook-field(model=cid, data-fields='facebook')
+  .extra-field.github-field(model=cid, data-fields='github')
+  .extra-field.instagram-field(model=cid, data-fields='instagram')
+  .extra-field.image-field(model=cid, data-fields='image_url')
+  .btn.btn-primary.save Save
+  .btn.btn-default.cancel Cancel
+else
+  .btn.btn-default.edit Edit
