--- a/client/app/organizations/style.scss
+++ b/client/app/organizations/style.scss
@@ -12,6 +12,17 @@
   position: relative;
 }
 
+.cover-photo::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0,0,0,.5);
+  z-index: 1;
+}
+
 .organization-title,
 .organization-location {
   color: #fff;
@@ -20,6 +31,7 @@
 
 .organization-title-container {
   position: relative;
+  z-index: 2;
 }
 
 .organization-social-media-container {
@@ -51,12 +63,27 @@
 .organization-details-field-value {
   vertical-align: middle;
   font-size: 18px;
+  text-align: left;
 }
 
 .organization-details-row {
-  padding: 10px 0;
+  padding: 5px 0;
+  text-align: center;
 }
 
 .organization-details-box {
-  margin: 20px 0;
+  margin-top: 10px;
+}
+
+@media (min-width: $screen-sm) {
+  .organization-details-box {
+    margin: 20px 0;
+    width: 50%;
+    display: inline-block;
+    vertical-align: top;
+  }
+}
+
+.read-action-container {
+  text-align: right;
 }
