--- a/client/app/shared/people/style.scss
+++ b/client/app/shared/people/style.scss
@@ -2,13 +2,21 @@
   margin-top: 40px;
 }
 
-.person {
-  display: inline-block;
-  border: 1px solid $borderGray;
-  width: 200px;
+.person-container {
+  width: calc(20% - 10px);
+  margin: 5px;
+  padding-bottom: 20%;
   position: relative;
-  height: 200px;
-  margin: 10px 10px 0 0;
+  box-sizing: content-box;
+  display: inline-block;
+}
+
+.person {
+  position: absolute;
+  border: 1px solid $borderGray;
+  width: 100%;
+  top: 0;
+  bottom: 0;
 }
 
 .person-picture {
