--- a/client/app/shared/components.scss
+++ b/client/app/shared/components.scss
@@ -1,3 +1,5 @@
 @import 'components/aside';
 @import 'components/action-icon';
 @import 'components/load-more';
+@import 'components/tile';
+@import 'components/tile-container';
