Add help requests, refine tiles, make mobile tiels, add colors

--- a/client/app/shared/components.scss
+++ b/client/app/shared/components.scss
@@ -3,3 +3,4 @@
 @import 'components/load-more';
 @import 'components/tile';
 @import 'components/tile-container';
+@import 'components/social-media-links'
