--- a/client/app/shared/helprequests/singletemplate.jade
+++ b/client/app/shared/helprequests/singletemplate.jade
@@ -1,9 +1,9 @@
 - var color = app.templateHelpers.randomColor(cid);
 .tile-image(style="background-color: #{color}")
-
 .tile-text
   .tile-title
-    = title
+    .title
+      = title
   .tile-more
-    = description
+    = text
 
