--- a/client/app/shared/people/singletemplate.jade
+++ b/client/app/shared/people/singletemplate.jade
@@ -1,11 +1,21 @@
-.person
-  .tile-image(style="background-image: url(#{profile_picture})")
-    .tile-details
-      .name.form-inline(model=cid, data-fields="first,last")
-        = first + " " + last
-  .tile-edit
-    if viewState.editing
-      i.action-icon.save.fa.fa-check
-      i.action-icon.cancel.fa.fa-times
-    else
-      i.action-icon.edit.fa.fa-pencil
+- var color = app.templateHelpers.randomColor(cid);
+- var style = "background-color: " + color + ";";
+- if (profile_picture) style = style + "background-image: url(" + profile_picture + ")";
+.tile-image(style=style)
+.tile-text
+  .tile-title
+    .name.form-inline(model=cid, data-fields="first,last")
+      = first + " " + last
+  .tile-more
+    = bio
+    .social-media-links
+      i.fa.fa-twitter
+      i.fa.fa-facebook
+      i.fa.fa-github
+      i.fa.fa-instagram
+.tile-edit
+  if viewState.editing
+    i.action-icon.save.fa.fa-check
+    i.action-icon.cancel.fa.fa-times
+  else
+    i.action-icon.edit.fa.fa-pencil
