Fix media query breakpoint.

--- a/client/app/shared/components/tile.scss
+++ b/client/app/shared/components/tile.scss
@@ -53,7 +53,7 @@
 }
 
 
-@media (max-width: $screen-sm-max) {
+@media (max-width: $screen-xs-max) {
   .tile {
     width: 100%;
     display: block;
