--- a/client/app/organizations/show/bannertemplate.jade
+++ b/client/app/organizations/show/bannertemplate.jade
@@ -1,7 +1,7 @@
 .cover-photo(style="background-image: url(#{image_url});")
   .organization-title-container
-    .h1.organization-title(model=cid, data-fields='short_name')= short_name
-    .h4.organization-location= city + ', ' + state
+    .organization-title(model=cid, data-fields='short_name')= short_name
+    .organization-location= city + ', ' + state
     .organization-social-media-container
       i.fa.fa-twitter
       i.fa.fa-facebook
