--- a/client/app/organizations/show/detailstemplate.jade
+++ b/client/app/organizations/show/detailstemplate.jade
@@ -7,34 +7,36 @@ mixin detailsRow(field, icon)
     .organization-details-field-value.inline-block(model=cid, data-fields=field)
       yield block
 
-p.organization-short-description(model=cid, data-fields='short_description')= short_description
+.edit-buttons-container
+  if viewState.editing
+    .btn.btn-primary.save Save
+    .btn.btn-default.cancel Cancel
+  else
+    .btn.btn-default.edit Edit
 if !viewState.expanded && !viewState.editing
+  p.organization-description
+    = app.templateHelpers.truncate(long_description, 300)
   .read-action-container
     a.action.read-more Read more
 else
-  .organization-expanded-details
-    p.organization-description(model=cid, data-fields='long_description')= long_description
-    .read-action-container
-      a.action.read-less Read less
-    .organization-details-box-container
-      .organization-details-box
-        if (address_0 && city) || viewState.editing
-          +detailsRow('address_0,address_1,city,state,zipcode', 'fa-map-marker')
-            +address(address_0, address_1, city, state, zipcode)
-      .organization-details-box
-        if primary_website || viewState.editing
-          +detailsRow('primary_website', 'fa-link')
-            a(href=primary_website)= primary_website
-        if phone || viewState.editing
-          +detailsRow('phone', 'fa-phone')
-            = phone
+  p.organization-description(model=cid, data-fields='long_description')= long_description
+  .organization-details-box-container
+    .organization-details-box
+      if (address_0 && city) || viewState.editing
+        +detailsRow('address_0,address_1,city,state,zipcode', 'fa-map-marker')
+          +address(address_0, address_1, city, state, zipcode)
+    .organization-details-box
+      if primary_website || viewState.editing
+        +detailsRow('primary_website', 'fa-link')
+          a(href=primary_website)= primary_website
+      if phone || viewState.editing
+        +detailsRow('phone', 'fa-phone')
+          = phone
+  .read-action-container
+    a.action.read-less Less
 if viewState.editing
   .extra-field.twitter-field(model=cid, data-fields='twitter')
   .extra-field.facebook-field(model=cid, data-fields='facebook')
   .extra-field.github-field(model=cid, data-fields='github')
   .extra-field.instagram-field(model=cid, data-fields='instagram')
   .extra-field.image-field(model=cid, data-fields='image_url')
-  .btn.btn-primary.save Save
-  .btn.btn-default.cancel Cancel
-else
-  .btn.btn-default.edit Edit
