Cosmetic css cleaning with csscomb.

--- a/client/app/main.scss
+++ b/client/app/main.scss
@@ -1,9 +1,8 @@
-@import "bootstrap-custom";
-@import "shared/style/variables";
-@import "shared/style/base";
-@import "shared/components";
-@import "application/style";
-@import "header/style";
-@import "organizations/style";
-@import "shared/people/style";
-
+@import 'bootstrap-custom';
+@import 'shared/style/variables';
+@import 'shared/style/base';
+@import 'shared/components';
+@import 'application/style';
+@import 'header/style';
+@import 'organizations/style';
+@import 'shared/people/style';
