--- a/client/app/header/style.scss
+++ b/client/app/header/style.scss
@@ -1,8 +1,8 @@
 .header-item {
   height: $navbar-height;
+  padding: 0 10px;
   line-height: $navbar-height;
   text-align: center;
-  padding: 0 10px;
 }
 
 .header-menu {
@@ -16,8 +16,8 @@
 
 .header-menu-item {
   font-size: 1.3em;
+  transition: background-color .2s ease-out;
   border-left: 1px solid $navbar-default-border;
-  transition: background-color 0.2s ease-out;
   &:hover {
     background-color: darken($navbar-default-bg, 7%);
   }
