--- a/client/app/shared/components/tile.scss
+++ b/client/app/shared/components/tile.scss
@@ -1,32 +1,31 @@
 .tile {
+  position: relative;
+  display: inline-block;
   width: calc(20% - 10px);
   margin: 5px;
   padding-bottom: 20%;
-  position: relative;
-  border: 1px solid $borderGray;
-  display: inline-block;
   overflow: hidden;
+  border: 1px solid $borderGray;
 }
 
 .tile-image {
   position: absolute;
   top: 0;
+  right: 0;
   bottom: 0;
   left: 0;
-  right: 0;
-  background-size: cover;
   background-color: #777;
+  background-size: cover;
 }
 
 .tile-title {
   position: absolute;
-  bottom: 0;
   right: 0;
+  bottom: 0;
   left: 0;
   padding: 10px;
-  background-color: rgba(35, 35, 35, 0.5);
-  transition: all 0.2s linear;
   color: #ddd;
+  background-color: rgba(35, 35, 35, .5);
 }
 
 .tile-edit {
@@ -37,15 +36,15 @@
 }
 
 .tile-more {
-  transition: all 0.2s ease-out;
   position: absolute;
   top: 0;
   bottom: 0;
   width: 100%;
-  transform: translateY(100%);
-  background-color: rgba(35, 35, 35, 1);
-  color: #fff;
   padding: 10px;
+  transition: all .2s ease-out;
+  transform: translateY(100%);
+  color: #fff;
+  background-color: rgba(35, 35, 35, 1);
 }
 
 .tile:hover .tile-more {
@@ -55,8 +54,8 @@
 
 @media (max-width: $screen-xs-max) {
   .tile {
-    width: 100%;
     display: block;
+    width: 100%;
     margin: 10px 0;
     padding-bottom: 20px;
     border: none;
@@ -64,9 +63,9 @@
 
   .tile-image {
     position: static;
+    display: inline-block;
     width: 30%;
     padding-bottom: 30%;
-    display: inline-block;
     vertical-align: top;
   }
 
@@ -80,25 +79,24 @@
 
   .tile-title {
     position: static;
-    background-color: #fff;
-    color: #000;
-    font-weight: bold;
     padding: 0;
+    font-weight: bold;
+    color: #000;
+    background-color: #fff;
   }
 
   .tile-more {
-    transition: none;
     position: static;
     width: 100%;
-    transform: translateY(0);
-    background-color: #fff;
-    color: #000;
-    padding: 0;
     margin-top: 10px;
+    padding: 0;
+    transition: none;
+    transform: translateY(0);
+    color: #000;
+    background-color: #fff;
   }
 
   .tile:hover .tile-more {
     transform: translateY(0);
   }
-
 }
