--- a/client/app/organizations/show/layouttemplate.jade
+++ b/client/app/organizations/show/layouttemplate.jade
@@ -1,5 +1,5 @@
-.region-container.organization-banner-container
-.region-container.organization-details-container
-.region-container.help-requests-container
-.region-container.recordings-container
-.region-container.people-container
+.view-container.organization-banner-container
+.view-container.organization-details-container
+.view-container.help-requests-container
+.view-container.recordings-container
+.view-container.people-container
